--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
   firebase_core: ^3.6.0
+  cloud_firestore: 5.4.4
+  intl: 0.18.1
   firebase_auth:
   get_it:
   dartz:
