--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
   firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.6
   cloud_firestore: ^5.4.5
-  intl: ^0.19.0
+  intl: ^0.20.1
   shared_preferences: ^2.0.15
   firebase_storage: ^12.3.6
   image_picker: ^1.0.0
